notes on 2013Cocco paper

--- a/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
+++ b/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
@@ -24,8 +24,11 @@
     "2. [Re-weighting Sequences](#reweight)\n",
     "3. [Compute Single and Double Site marginals](#marginals)\n",
     "4. [Compute the Covariance matrix](#covmat)\n",
-    "5. [Maximum Entropy Modeling and Direct Coupling Analysis](#maxent)\n",
-    "6. [PSICOV - Sparse inverse covariance estimation](#2011PSICOV)\n",
+    "5. [Maximum Entropy Modeling and Direct Coupling Analysis](#maxent)  \n",
+    "6. [Approximations to DCA](#approxdca)\n",
+    "7. [PSICOV - Sparse inverse covariance estimation](#2011PSICOV)\n",
+    "8. [Correlation Matrix and connection to PCA](#pcaconnect)\n",
+    "9. [What results does the paper 2013Cocco have?](#2013CoccoResults)\n",
     "\n",
     "***\n"
    ]
@@ -64,6 +67,9 @@
     "import os\n",
     "import itertools\n",
     "import numpy as np\n",
+    "import scipy\n",
+    "import scipy.linalg\n",
+    "\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -418,32 +424,43 @@
     "3. $\\bf P$ has the **maximum possible entropy** so we maximize\n",
     "$$ H[{\\bf P}] = - \\sum_{\\text{all sequences of length L}} P \\log P$$\n",
     "\n",
-    "Condition 1 gives us $Lq$ constraints and Condition 2 gives us $\\frac{L(L+1)}{2} q^2$ additional constraints. This allows us to do a gigantic constrained optimization using Lagrange Multipliers and come up with an analytic form for $\\bf P$.\n",
+    "Condition 1 gives us $Lq$ constraints and Condition 2 gives us $\\frac{L(L-1)}{2} q^2$ additional constraints. This allows us to do a gigantic constrained optimization using Lagrange Multipliers and come up with an analytic form for $\\bf P$.\n",
     "$$ P(a_1, \\ldots, a_L) = \\frac{1}{Z} \\exp{ \\bigg\\{ \\frac{1}{2} \\sum_{i,j} e_{ij}(a_i, a_j) + \\sum_{i} h_i(a_i) \\bigg\\} }$$\n",
     "\n",
     "Here $Z$ is a normalization constant that makes sure that all the probabilities add up to $1$. The parameters $e_{ij}(a,b)$ are the direct couplings and $h_i(a)$ are the local fields acting on single sites. These values have to be determined so that Conditions 1 and 2 are satisfied. \n",
     "\n",
     "It is not possible to compute these parameters exactly for reasonably sized proteins as calculating $Z$ and the marginals require summations over all $q^L$ possible amino-acid sequences. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Approximations to DCA <a id=\"dcaapprox\"></a>\n",
+    "There are [several approximations](https://en.wikipedia.org/wiki/Direct_coupling_analysis) to estimate the parameters above\n",
     "\n",
-    "**Mean Field Approximation** This is an approximation in statistical physics to help solve this intractable problem. We expand the exponential of the sum of the direct couplings using a Taylor Series expansion and then only keep the linear terms. With this approximation the values for the direct couplings are $$e_{ij}(a,b) = (C^{-1})_{ij}(a,b) \\qquad \\forall i,j, \\enspace \\forall a,b=1, \\ldots, q-1$$ and $$e_{ij}(a,q) = e_{ij}(q,a) = 0 \\qquad \\forall a = 1, \\ldots, q.$$\n",
+    "* Boltzmann Machine Learning (BM)\n",
+    "* Message passing / belief propagation (mpDCA)\n",
+    "* Mean Field Approximation (mfDCA)\n",
+    "* Gaussian Approximation (gaussDCA)\n",
+    "* Pseudolikelihoods Maximization (PLM)\n",
+    "* Adaptive Cluster Expansion (ACE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mean Field Approximation <a id=\"meanfield\"></a>\n",
+    "This is an approximation in statistical physics to help solve this intractable problem. We expand the exponential of the sum of the direct couplings using a Taylor Series expansion and then only keep the linear terms. With this approximation the values for the direct couplings are $$e_{ij}(a,b) = (C^{-1})_{ij}(a,b) \\qquad \\forall i,j, \\enspace \\forall a,b=1, \\ldots, q-1$$ and $$e_{ij}(a,q) = e_{ij}(q,a) = 0 \\qquad \\forall a = 1, \\ldots, q,$$ and $$ h_i(q) = 0.$$\n",
     "\n",
-    "This approximation approach is known as **direct coupling analysis (DCA)**. Once the direct couplings have been calculated, they can be used to predict contacts between residues. This will be covered later."
+    "This approximation approach is known as **mean field direct coupling analysis (mfDCA)**. Once the direct couplings have been calculated, they can be used to predict contacts between residues. This post processing prediction step will be covered later. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Our Covariance matrix isn't invertible\n",
-    "cov = C_i_j_a_b.reshape((L*(q-1), L*(q-1)))\n",
-    "eigvals = np.linalg.eigvalsh(cov)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -451,18 +468,22 @@
      "output_type": "stream",
      "text": [
       "Number of eigenvalues: 3720\n",
-      "Number of eigenvalues non-positive: 100\n"
+      "Number of eigenvalues non-positive: 109\n"
      ]
     }
    ],
    "source": [
+    "# Our Covariance matrix isn't invertible\n",
+    "cov = C_i_j_a_b.reshape((L*(q-1), L*(q-1)))\n",
+    "eigvals = np.linalg.eigvalsh(cov)\n",
+    "\n",
     "print(\"Number of eigenvalues: {}\".format(eigvals.size))\n",
     "print(\"Number of eigenvalues non-positive: {}\".format(np.sum(eigvals <= 0)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -493,24 +514,78 @@
    "source": [
     "### PSICOV - Sparse inverse covariance estimation <a id=\"2011PSICOV\"></a>\n",
     "\n",
-    "The 2011 paper *PSICOV - precise structural contact prediction using sparse inverse covariance estimation* (**2011PSICOV**) deals with extracting information directly by inverting the unprojected covariance matrix $C_{ij}(a, b)$. T\n",
+    "The 2011 paper *PSICOV - precise structural contact prediction using sparse inverse covariance estimation* (**2011PSICOV**) deals with extracting information directly by inverting the unprojected covariance matrix $C_{ij}(a, b)$. \n",
     "\n",
     "This inversion gives a matrix $\\Theta$ of partial correlations (i.e correlation between two sites controlling for the effect of all other sites). The covariance matrix is singular and so **2011PSICOV** regularizes the matrix in addition to asking for sparse solutions for the inverse via LASSO. \n",
     "\n",
     "This matrix $\\Theta$ is used to predict contacts in the following way. The L1 norm of the submatrix of $\\Theta$ which consists of 20x20 amino acids (the gap is ignored)  at i and j is calculated. \n",
     "$$S_{ij}^{\\text{contact}} = \\sum_{ab} |\\Theta_{ij}(a,b)|.$$\n",
     "\n",
-    "This score is then corrected for averages across sites called an *Average Product correction* (APC) to give a final PSICOV score. \n",
+    "This score is then corrected for averages across sites called an *Average Product correction* (APC) to give a final PSICOV score for pairs of sites $i$ and $j$. $$PC_{ij} = S_{ij}^{\\text{contact}} - \\frac{\\bar{S}_{i-}^{\\text{contact}} \\bar{S}_{-j}^{\\text{contact}}}{\\bar{S}_{--}^{\\text{contact}}}$$\n",
     "\n",
-    "Also, this somewhat coincides with the mean field approximation under DCA. DCA uses the projected covariance matrix and 2011PSICOV uses the unprojected matrix. \n"
+    "Also, this somewhat coincides with the mean field approximation under DCA. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of eigenvalues: 3720\n",
+      "Number of eigenvalues non-positive: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If we add a tiny multiple of identity to our covariance matrix we get positive eigenvalues and so we can invert\n",
+    "# we need to be careful about stability and regularization\n",
+    "tiny_epsilon = 0.0000001\n",
+    "cov_epsilon = cov + tiny_epsilon * np.eye(cov.shape[0])\n",
+    "eigvals = np.linalg.eigvalsh(cov_epsilon)\n",
+    "\n",
+    "print(\"Number of eigenvalues: {}\".format(eigvals.size))\n",
+    "print(\"Number of eigenvalues non-positive: {}\".format(np.sum(eigvals <= 0)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation Matrix and connection to PCA <a id=\"pcaconnect\"></a>\n",
+    "\n",
+    "We construct the Pearson Correlation Matrix $\\Gamma$ through the relationship $$\\Gamma_{ij}(a,b) = \\sum_{c,d = 1}^{q-1} (D_i)^{-1} (a, c) C_{ij}(c,d) (D_j)^{-1}(d,b),$$ where the matrices $D_i$ are the square roots of the single-site correlation matrices, i.e. $$C_{ii}(a, b) = \\sum_{c=1}^{q-1} D_i(a,c)D_i(c, b).$$\n",
+    "\n",
+    "$\\Gamma$ is normalized and on each site is a $(q-1) \\times (q-1)$ identity matrix. $$\\Gamma_{ij}(a,b) = \\delta_{ab}.$$\n",
+    "\n",
+    "#### Eigenvalues and Eigenvectors <a id=\"eigen\"></a>\n",
+    "Once we have the correlation matrix we can find the eigenvalues and the eigenvectors. $\\mu = 1, \\ldots, L(q-1)$\n",
+    "\n",
+    "$$\\sum_{j=1}^L \\sum_{b=1}^{q-1} \\Gamma_{ij}(a,b) v^{\\mu}_{jb} = \\lambda_{\\mu} v^{\\mu}_{ia},$$ where the eigenvalues are ordered in decreasing order and the eigenvectors are chosen to form an ortho-normal basis. Also, only the top eigenvalues are chosen and all other eigenvalues are discarded. \n",
+    "\n",
+    "#### Other places PCA has been used <a id=\"otherpca\"></a>\n",
+    "PCA has been used on MSA data to identity functional sites as well as sectors (culsters of evolutionarily correlated sites). \n",
+    "\n",
+    "**Specificity-determing positions** PCA was used by Casari et al. to identity functional sites specific to subfamilies. Here, PCA was used on a Comparison matrix $C(m, m')$ which counts the number of identical resides between each pair of sequences $(m, m'=1, \\ldots, M)$. This is a very different matrix from $\\Gamma$.\n",
+    "\n",
+    "**Statistical Coupling Analysis** This approach was used by Ranganathan et al. Here, a modified residue covariance matrix is defined : $$\\tilde{C}^{SCA}_{ij}(a,b) = w_i^a C_{ij}(a,b) w_j^b,$$ where the weights $w_i^a$ favor positions $i$ and resides $a$ of high conservation. Then an effective covariance matrix is defined between positions only $$\\tilde{C}^{SCA}_{ij} = \\sqrt{\\sum_{a,b} \\tilde{C}^{SCA}(a,b)^2}.$$\n",
+    "\n",
+    "Principal component analysis is then applied to the $L$-dimensional $\\tilde{C}^{SCA}$ matrix and used to define sectors (i.e. clusters of evolutionaily correlated sites)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What results does the paper 2013Cocco have? <a id=\"2013CoccoResults\"></a>\n",
+    "\n",
+    "The coupling matrix $e_{ij}(a,b)$ has dimension $L(q-1) \\times L(q-1)$ and the paper wants to find low rank versions of this coupling matrix which offers a way to reduce the number of parameters much below that of the mean field approximation. Also the solutions that they get are connected to the eigenvalues and eigenvectors of the correlation matrix $\\Gamma$. This establishes a connection between DCA and PCA. The connection is a little counter-intuitive because the low eigenvalues of $\\Gamma$ are actually important for determining the the low rank coupling matrix. \n",
+    "\n",
+    "It does not look like this connection has much to do with SCA or finding sectors. "
+   ]
   }
  ],
  "metadata": {
