Rerun with float64

--- a/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
+++ b/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
@@ -247,7 +247,7 @@
     "    print(\"Loading weights from : \", weights_file)\n",
     "\n",
     "else:\n",
-    "    weights = np.zeros(M)\n",
+    "    weights = np.zeros(M, dtype=np.float64)\n",
     "\n",
     "    for i in range(M):\n",
     "        weights[i] = compute_weight(i)\n",
@@ -286,7 +286,7 @@
    "source": [
     "# q is the alphabet\n",
     "q = len(AMINO_ACIDS)\n",
-    "pseudo_count = 10 * round(M_eff)"
+    "pseudo_count = round(M_eff)"
    ]
   },
   {
@@ -339,21 +339,23 @@
     "    arr_onehot_reorder = np.moveaxis(arr_onehot, 0, 2)\n",
     "    weighted_arr_onehot = arr_onehot_reorder * weights\n",
     "\n",
-    "    # Weighted Single Site Marignals\n",
-    "    f_i_a = np.sum((arr_onehot_reorder * weights), axis=-1)\n",
-    "    print(\"f_i_a.shape = {}\".format(f_i_a.shape)) \n",
     "    \n",
     "    # Set up the weighted double site marginals array\n",
-    "    f_i_j_a_b = np.zeros((L, q, L, q), dtype=f_i_a.dtype)\n",
+    "    f_i_j_a_b = np.zeros((L, q, L, q), dtype=weights.dtype)\n",
     "    \n",
     "    # we cannot use outer products here because our arrays are too big\n",
     "    # So we iterate\n",
     "    for j, b in itertools.product(range(L), range(q)):\n",
     "        f_i_j_a_b[:, :, j, b] = np.sum((weighted_arr_onehot * arr_onehot_reorder[j, b, :]), axis=-1)\n",
-    "    if progress_bar:\n",
-    "        clear_output(wait=True)\n",
-    "    print(\"Finished processing j={}, b={}, AA={}\".format(j, b, AMINO_ACIDS[b].tostring().decode()))\n",
+    "        if progress_bar:\n",
+    "            clear_output(wait=True)\n",
+    "        print(\"Finished processing j={}, b={}, AA={}\".format(j, b, AMINO_ACIDS[b].tostring().decode()))\n",
     "\n",
+    "    # Weighted Single Site Marignals\n",
+    "    f_i_a = np.sum((arr_onehot_reorder * weights), axis=-1)\n",
+    "    print(\"f_i_a.shape = {}\".format(f_i_a.shape)) \n",
+    "\n",
+    "    \n",
     "    np.save(single_site_marginal_file, f_i_a)\n",
     "    np.save(double_site_marginal_file, f_i_j_a_b)\n",
     "    \n",
@@ -468,7 +470,7 @@
      "output_type": "stream",
      "text": [
       "Number of eigenvalues: 3720\n",
-      "Number of eigenvalues non-positive: 109\n"
+      "Number of eigenvalues non-positive: 79\n"
      ]
     }
    ],
