Notes on patterns

--- a/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
+++ b/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
@@ -442,6 +442,9 @@
     "Here $Z$ is a normalization constant that makes sure that all the probabilities add up to $1$. The parameters $e_{ij}(a,b)$ are the direct couplings and $h_i(a)$ are the local fields acting on single sites. These values have to be determined so that Conditions 1 and 2 are satisfied. \n",
     "\n",
     "It is not possible to compute these parameters exactly for reasonably sized proteins as calculating $Z$ and the marginals require summations over all $q^L$ possible amino-acid sequences. \n",
+    "\n",
+    "\n",
+    "We can also view the Maximum Entropy model via its dual Maximum Likelihood problem. i.e. Assume that $P$ has the form above and maximize $$\\mathcal{L} \\big[ \\{e_{ij}(a,b), h_i(a) \\} \\big\\lvert \\text{MSA} \\big] = \\frac{1}{M} \\sum_{m=1}^{M} \\log P(a_1^M, \\ldots, a_L^m)$$ \n",
     "\n"
    ]
   },
@@ -643,7 +646,18 @@
     "\n",
     "For each pattern we can define a *log-score* of a sequence $(a_1, \\ldots, a_L)$ as $$S(a_1, \\ldots, a_L | \\boldsymbol\\xi) = \\bigg[ \\sum_{i=1}^L \\xi_i(a_i) \\bigg]^2.$$\n",
     "\n",
-    "Although $S$ has no log in its definition, it is probably called a *log-score* because it is in the exponential part of the probabilty model. We re-write the probability of an amino-acid sequence $(a_1, \\ldots, a_L)$ in terms of the log score of the patterns as  $$P(a_1, \\ldots, a_L) = \\frac{1}{Z} \\exp \\bigg\\{ \\frac{1}{2L} \\sum_{\\mu=1}^{p+} S(a_1, \\ldots, a_L | \\xi^{+,\\mu}) - \\frac{1}{2L} \\sum_{\\nu=1}^{p-} S(a_1, \\ldots, a_L | \\xi^{-,\\nu}) + \\sum_{i=1}^L h_i(a_i)  \\bigg\\}$$"
+    "Although $S$ has no log in its definition, it is probably called a *log-score* because it is in the exponential part of the probabilty model. We re-write the probability of an amino-acid sequence $(a_1, \\ldots, a_L)$ in terms of the log score of the patterns as  $$P(a_1, \\ldots, a_L) = \\frac{1}{Z} \\exp \\bigg\\{ \\frac{1}{2L} \\sum_{\\mu=1}^{p_+} S(a_1, \\ldots, a_L | \\xi^{+,\\mu}) - \\frac{1}{2L} \\sum_{\\nu=1}^{p_-} S(a_1, \\ldots, a_L | \\xi^{-,\\nu}) + \\sum_{i=1}^L h_i(a_i)  \\bigg\\}$$\n",
+    "\n",
+    "This form for the probability distribution corresponds to the following choice of couplings \n",
+    "$$e_{ij}(a,b) = \\frac{1}{L} \\sum_{\\mu = 1}^{p_+} \\xi_i^{+,\\mu}(a)\\xi_j^{+,\\mu}(b) - \\frac{1}{L} \\sum_{\\mu = 1}^{p_-} \\xi_i^{-,\\nu}(a)\\xi_j^{-,\\nu}(b) $$\n",
+    "\n",
+    "This form of the coupling matrix has rank $p = p_{+} + p_{-}$ and if we choose $p = L(q-1)$ then the coupling matrix has full rank. However, we want to reduce the dimension of the coupling matrix and so we choose $p$ well below that. \n",
+    "\n",
+    "The patterns are determined by Maximum Likelihood inference using Statistical Physics methods but they have an easy to understand relationship with the eigenvalues and eigenvectors of the correlation matrix $\\Gamma$. Basically the attractive patterns correspond to the $p_+$ largest eigenvalues $(\\lambda_1 \\geq \\lambda_2 \\geq \\ldots \\geq \\lambda_{p_+} \\geq 1)$ and the repulsive patterns correspond to the $p_-$ smallest eigenvalues $(\\lambda_{L(q-1)} \\leq \\lambda_{L(q-1) - 1} \\leq \\ldots \\leq \\lambda_{L(q-1) + 1 - p} \\leq 1)$. If we pick a pattern $\\xi$ and its corresponding eigenvalue $\\lambda$ and eigenvector $\\nu$. Then we have $$\\xi_i(a) = \\mid 1 - 1/\\lambda \\mid^{1/2} \\tilde{\\nu}_{ia}$$ where $$\\tilde{\\nu}_{ia} = \\sum_{b=1}^{q-1} (D_i)^{-1}(a,b) \\nu_{jb}$$\n",
+    "\n",
+    "We can see that the prefactor $\\mid 1 - 1/\\lambda \\mid^{1/2}$ vanishes for $\\lambda = 1$ which is the mean of the eigenvalues. \n",
+    "\n",
+    "Also, from the ML inference we get the contribution of a pattern $\\xi$ to the model's log likelihood is a function of its associated eigenvalue $\\lambda$ only, $$\\Delta \\mathcal{L}(\\lambda) = \\frac{1}{2}(\\lambda -1 - \\log\\lambda).$$"
    ]
   },
   {
@@ -702,6 +716,7 @@
     }
    ],
    "source": [
+    "# Repulsive patterns\n",
     "# plot pattern corresponding to the smallest eigenvalues\n",
     "fig, (ax0, ax1, ax2) = plt.subplots(3, 1, sharex=True, figsize=(15, 9))\n",
     "plot_pattern(0, ax0, signif_label_digits=15)\n",
@@ -728,6 +743,7 @@
     }
    ],
    "source": [
+    "# Attractive patterns\n",
     "# plot pattern corresponding to the largest eigenvalue\n",
     "fig, (ax0, ax1, ax2) = plt.subplots(3, 1, sharex=True, figsize=(15, 9))\n",
     "plot_pattern(-1, ax0, signif_label_digits=2)\n",
