Changes to output only a few files

--- a/projects/PCA_to_DCA/notebooks/DHFR_energy_function.ipynb
+++ b/projects/PCA_to_DCA/notebooks/DHFR_energy_function.ipynb
@@ -8,14 +8,14 @@
     "\n",
     "We would like to take an evolutionary MSA for DHFR and create an energy function following [2013Cocco](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003176). Then we will use this energy function to score single and double mutants from the Homo sapiens version of DHFR. \n",
     "\n",
-    "The energy function takes the form of a probability model [Eqn (7) 2013Cocco](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003176#pcbi.1003176.e059)\n",
-    "$$ P(a_1, \\ldots, a_L) = \\frac{1}{Z} \\exp{ \\bigg\\{ \\frac{1}{2} \\sum_{i,j} e_{ij}(a_i, a_j) + \\sum_{i} h_i(a_i) \\bigg\\} },$$\n",
-    " which we estimate from the MSA. The probability represents the probability of seeing a given sequence $(a_1, \\ldots, a_L)$ in the MSA. Using the mean field approximation we get values for the coupling matrix $e_{ij}(a_i,a_j)$ and the local fields $h_i(a_i)$. It is hard to calculate the normalization constant $Z$ as $L$ is large. However, since $Z$ is a constant for every sequence in this MSA we can ignore it and get a relative score for each sequence by estimating $\\log (PZ)$.\n",
+    "The probability model takes the form [Eqn (7) 2013Cocco](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003176#pcbi.1003176.e059)\n",
+    "$$ P(a_1, \\ldots, a_L) = \\frac{1}{Z} \\exp{ \\bigg\\{ \\frac{1}{2} \\sum_{i,j} e_{ij}(a_i, a_j) + \\sum_{i} h_i(a_i) \\bigg\\} }.$$\n",
+    "This represents the probability of seeing a given sequence $(a_1, \\ldots, a_L)$ in the MSA. Using the mean field approximation we get values for the coupling matrix $e_{ij}(a_i,a_j)$ and the local fields $h_i(a_i)$. It is hard to calculate the normalization constant $Z$ as $L$ is large. However, since $Z$ is a constant for every sequence in this MSA we can ignore it and get a relative score for each sequence by estimating $-\\log (PZ)$. We define an energy function $\\mathcal{H}(a_1, \\ldots, a_L)$ as $$P(a_1, \\ldots, a_L) = \\exp{ \\big\\{ -\\mathcal{H}(a_1, \\ldots, a_L) \\big\\} }$$\n",
     " \n",
     "**Sections**\n",
     "1. [Import pre-computed data and generate covariance matrix](#gencovmat)\n",
     "2. [Generate probability model parameters](#probparams)\n",
-    "3. [Calculate relative score for human DHFR](#relativescore)\n",
+    "3. [Calculate energy for human DHFR](#energycalc)\n",
     "4. [Create Mutants Energy file](#createmutantsenergy)"
    ]
   },
@@ -170,7 +170,9 @@
     "### Generate probability model parameters <a id=\"probparams\" />\n",
     "\n",
     "From [Eqn (8) 2013Cocco](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003176#pcbi.1003176.e071) we have \n",
-    "$$e_{ij}(a,b) = (C^{-1})_{ij}(a,b) \\qquad \\forall i,j, \\enspace \\forall a,b=1, \\ldots, q-1$$ and $$e_{ij}(a,q) = e_{ij}(q,a) = 0 \\qquad \\forall a = 1, \\ldots, q,$$ and $$ h_i(q) = 0.$$"
+    "$$e_{ij}(a,b) = -(C^{-1})_{ij}(a,b) \\qquad \\forall i,j, \\enspace \\forall a,b=1, \\ldots, q-1$$ and $$e_{ij}(a,q) = e_{ij}(q,a) = 0 \\qquad \\forall a = 1, \\ldots, q,$$ and $$ h_i(q) = 0.$$\n",
+    "\n",
+    "It is likely that the negative sign was omitted by accident in Eqn (8)."
    ]
   },
   {
@@ -224,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculate relative score for human DHFR  <a id=\"relativescore\" />"
+    "### Calculate energy score for human DHFR  <a id=\"energycalc\" />"
    ]
   },
   {
@@ -272,8 +274,8 @@
     "    # meshgrid creates a \"tuple\" product of the indices by repeating the index\n",
     "    # along the x axis in xv and repeating it along the yaxis in yv\n",
     "    xv, yv = np.meshgrid(idx, idx)\n",
-    "    energy = np.sum(e_i_j_a_b[seq_runner, xv, seq_runner, yv ]) / 2. + \\\n",
-    "        h_i_a[seq_runner, idx].sum()\n",
+    "    energy = -np.sum(e_i_j_a_b[seq_runner, xv, seq_runner, yv ]) / 2. - \\\n",
+    "        np.sum(h_i_a[seq_runner, idx])\n",
     "    return(energy)"
    ]
   },
@@ -285,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "-588711.3156041729"
+       "588711.3156041729"
       ]
      },
      "execution_count": 12,
@@ -302,9 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create Mutants Energy file <a id=\"createmutantsenergy\" />\n",
-    "\n",
-    "*We can speed this up by only calculating the energy difference between mutant sequences and WT*"
+    "### Create Mutants Energy file <a id=\"createmutantsenergy\" />"
    ]
   },
   {
@@ -351,12 +351,12 @@
     "        aa_idx = human_DHFR_idx[i]\n",
     "        aa = AA_ascii[aa_idx]\n",
     "        for mut_idx in range(1, (q-1)): # do not switch to the gap symbol\n",
-    "            if (mut_idx != aa_idx): # do not switch to mutant to the same symbol as WT\n",
+    "            if (mut_idx != aa_idx): # do not switch to mutant with the same symbol as WT\n",
     "                mut = AA_ascii[mut_idx]\n",
     "                mut_DHFR_idx = human_DHFR_idx.copy()\n",
     "                mut_DHFR_idx[i] = mut_idx\n",
-    "                energy = calculate_energy_function(mut_DHFR_idx)\n",
-    "                print(\"{0:}{1:}{2:}\\t{3:}\".format(aa, i + 1, mut, energy), file=fh)"
+    "                delta_energy = calculate_energy_function(mut_DHFR_idx) - human_DHFR_energy\n",
+    "                print(\"{}{}{}\\t{}\".format(aa, i + 1, mut, delta_energy), file=fh)"
    ]
   },
   {
@@ -365,40 +365,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "V1K\t-588798.0856454724\r\n",
-      "V1D\t-588517.8028304778\r\n",
-      "V1E\t-588795.4418900218\r\n",
-      "V1Q\t-588542.1029375127\r\n",
-      "V1N\t-588530.3745272686\r\n",
-      "V1H\t-588341.319892712\r\n",
-      "V1S\t-588652.157661544\r\n",
-      "V1T\t-588476.5636452194\r\n",
-      "V1C\t-588293.1471080026\r\n",
-      "V1Y\t-588463.4439595203\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "# inspect and compress the file\n",
-    "!head $single_mutant_energy_filename\n",
-    "!gzip -f $single_mutant_energy_filename"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
        "'../data/output/mutagenesis/double_mutants.tsv'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing site i= 185 ,j= 186  of  186\n"
+      "Processing site i=185, j=186 of 186\n"
      ]
     }
    ],
@@ -445,40 +417,42 @@
     "            if (i < j): #if i = j then we are creating single mutants\n",
     "                if progress_bar:\n",
     "                    clear_output(wait=True)\n",
-    "                print (\"Processing site i=\", i+1, \",j=\", j+1 , \" of \", L)\n",
+    "                print (\"Processing site i={}, j={} of {}\".format(i+1, j+1, L))\n",
     "                aa2_idx = human_DHFR_idx[j]\n",
     "                aa2 = AA_ascii[aa2_idx]\n",
     "                for mut1_idx in range(1, (q-1)): # do not switch to the gap symbol\n",
     "                    mut1 = AA_ascii[mut1_idx]\n",
-    "                    for mut2_idx in range(1, (q-1)):\n",
-    "                        if mut1_idx != mut2_idx:\n",
-    "                            mut2 = AA_ascii[mut2_idx]\n",
-    "                            mut_DHFR_idx = human_DHFR_idx.copy()\n",
-    "                            mut_DHFR_idx[i] = mut1_idx\n",
-    "                            mut_DHFR_idx[j] = mut2_idx\n",
-    "                            energy = calculate_energy_function(mut_DHFR_idx)\n",
-    "                            print(\"{}{}{},{}{}{}\\t{}\".format(aa1, i+1, mut1, aa2, j+1, mut2, energy), file=fh)"
+    "                    if mut1_idx != aa1_idx:\n",
+    "                        for mut2_idx in range(1, (q-1)):\n",
+    "                            if (mut1_idx != mut2_idx) and (mut2_idx != aa2_idx):\n",
+    "                                mut2 = AA_ascii[mut2_idx]\n",
+    "                                mut_DHFR_idx = human_DHFR_idx.copy()\n",
+    "                                mut_DHFR_idx[i] = mut1_idx\n",
+    "                                mut_DHFR_idx[j] = mut2_idx\n",
+    "                                delta_energy = calculate_energy_function(mut_DHFR_idx) - human_DHFR_energy\n",
+    "                                print(\"{}{}{},{}{}{}\\t{}\".format(aa1, i+1, mut1, aa2, j+1, mut2, delta_energy), \n",
+    "                                      file=fh)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "V1K,R2D\t-588743.1948797524\r\n",
-      "V1K,R2E\t-589020.8339392963\r\n",
-      "V1K,R2Q\t-588767.4949867873\r\n",
-      "V1K,R2N\t-588755.7665765432\r\n",
-      "V1K,R2H\t-588566.7119419866\r\n",
-      "V1K,R2S\t-588877.5497108187\r\n",
-      "V1K,R2T\t-588701.955694494\r\n",
-      "V1K,R2C\t-588518.5391572772\r\n",
-      "V1K,R2Y\t-588688.836008795\r\n",
-      "V1K,R2W\t-588566.9674016556\r\n"
+      "V1K,R2D\t31.87927557947114\r\n",
+      "V1K,R2E\t309.51833512343\r\n",
+      "V1K,R2Q\t56.17938261444215\r\n",
+      "V1K,R2N\t44.450972370337695\r\n",
+      "V1K,R2H\t-144.60366218630224\r\n",
+      "V1K,R2S\t166.23410664580297\r\n",
+      "V1K,R2T\t-9.35990967892576\r\n",
+      "V1K,R2C\t-192.77644689567387\r\n",
+      "V1K,R2Y\t-22.479595377924852\r\n",
+      "V1K,R2W\t-144.34820251725614\r\n"
      ]
     }
    ],
