Completing connection figure

--- a/projects/PCA_to_DCA/notes/DCA_sectors.tex
+++ b/projects/PCA_to_DCA/notes/DCA_sectors.tex
@@ -8,45 +8,20 @@
 
 % Modified from http://www.texample.net/tikz/examples/data-flow-diagram/
 
-% Defines a `datastore' shape for use in DFDs.  This inherits from a
-% rectangle and only draws two horizontal lines.
-\makeatletter
-\pgfdeclareshape{algoprocess}{
-  \inheritsavedanchors[from=rectangle]
-  \inheritanchorborder[from=rectangle]
-  \inheritanchor[from=rectangle]{center}
-  \inheritanchor[from=rectangle]{base}
-  \inheritanchor[from=rectangle]{north}
-  \inheritanchor[from=rectangle]{north east}
-  \inheritanchor[from=rectangle]{east}
-  \inheritanchor[from=rectangle]{south east}
-  \inheritanchor[from=rectangle]{south}
-  \inheritanchor[from=rectangle]{south west}
-  \inheritanchor[from=rectangle]{west}
-  \inheritanchor[from=rectangle]{north west}
-  \backgroundpath{
-    %  store lower right in xa/ya and upper right in xb/yb
-    \southwest \pgf@xa=\pgf@x \pgf@ya=\pgf@y
-    \northeast \pgf@xb=\pgf@x \pgf@yb=\pgf@y
-    \pgfpathmoveto{\pgfpoint{\pgf@xa}{\pgf@ya}}
-    \pgfpathlineto{\pgfpoint{\pgf@xb}{\pgf@ya}}
-    \pgfpathmoveto{\pgfpoint{\pgf@xa}{\pgf@yb}}
-    \pgfpathlineto{\pgfpoint{\pgf@xb}{\pgf@yb}}
- }
-}
-\makeatother
-
 \begin{document}
-\begin{center}
+\begin{figure}
+\centering
 \begin{tikzpicture}[
   font=\sffamily,
   every matrix/.style={ampersand replacement=\&,column sep=.5cm,row sep=.5cm},
   datamat/.style={draw,thick,rounded corners,fill=yellow!20,inner sep=.3cm},
   process/.style={draw,thick,circle,fill=blue!20},
   calcmat/.style={datamat,fill=green!20},
-  algoprocess/.style={draw,very thick,shape=algoprocess,inner sep=.3cm},
+  calcmatfinal/.style={datamat,fill=magenta!20},
+  algoprocess/.style={draw,thin,dotted,inner sep=.3cm},
   to/.style={->,>=stealth',shorten >=1pt,semithick,font=\sffamily\footnotesize},
   todots/.style={->,dotted,>=stealth',shorten >=1pt,semithick,font=\sffamily\footnotesize},
+  toapprx/.style={<->,double,dotted,>=stealth',shorten >=1pt,semithick,font=\sffamily\footnotesize},
   every node/.style={align=center}]
 % Position the nodes using a matrix layout
   \matrix{
@@ -58,14 +33,17 @@
     \&
     \& \\
 
+    \node[algoprocess] (FlattenAxis) {Flatten one axis}; 
     \& \node[process] (weightseqid) {
-                Weight \\ sequences \\ by identity
+                Weight by \\ sequence \\ identity
         }; 
     \& 
     \& \node[process] (weightcons) {
-                Weight \\ covariance by \\ conservation
+                Weight by \\ conservation
         }; 
-    \& \\
+    \& \node[algoprocess] (SingularProj)  {
+                Project via \\ first singular \\vector $P_i^a$
+    }; \\
 
     \node[datamat] (FlattenMSA) {
             MSA Multi Index \\ $x_{s, (i,a)}\;\; M\times Lq$
@@ -76,7 +54,7 @@
         };
     \&
     \& \node[datamat] (DataProj) {
-            Compress\\Data $M\times L$
+            Compressed\\Data $M\times L$
         }; \\
 
     % new line in matrix
@@ -88,7 +66,7 @@
         };  
     \& 
     \& \node[algoprocess] (CompressCov) {
-            Compress via\\Singular Values
+            Compress via\\Singular Norm
         };
     \&
     \& \node[algoprocess] (MaxEntSmall) {
@@ -103,35 +81,94 @@
         };  
     \& 
     \&
+    \node[calcmat] (CompressCovmat) {
+            Compressed \\ Covariance Matrix \\ $L\times L$
+        };
+    \& \\
+
+    \node[algoprocess] (CompressFrob) {
+            Compress via\\ Frobenius Norm
+    };
     \&
+    \&
+    \node[algoprocess] (PCA) {PCA};
+    \& \\
+
+    \node[calcmat] (NetworkBigSmall) {
+            Compressed \\ Network Weights \\ \\ $(i) \xrightarrow{e_{ij}} (j)$ \\ 
+        };  
+    \&  
+    \&  
+    \&     
     \& \node[calcmat] (NetworkSmall) {
-            Network Weights \\ \\ $(i) \xrightarrow{e_{ij}} (j)$ \\ 
+            Network Weights \\ \\ $(i) \xrightarrow{} (j)$ \\ 
         };  
     \\
 
-    \& 
-    \& \node[calcmat] (Sectors) {
-            PCA and ICA \\ coupled sectors
+    \node[algoprocess] (APC) {
+            Phylogenetic / \\ Sampling \\Correction
         };
-    \& \\
+    \&  
+    \&  
+    \node[algoprocess] (ICA) {ICA};
+    \&  
+    \&   \\
+
+
+    \node[calcmatfinal] (Contacts) {Evolutionary \\coupled contacts};
+    \&  
+    \&  
+    \node[calcmatfinal] (Sectors) {
+            Evolutionarily \\ coupled sectors
+    }; 
+    \&  
+    \&   \\
   };
 
   % Draw the arrows between the nodes and label them.
-  \draw[to]     (MSA) to[bend right=40] 
-                    node[midway,above] {Flatten \\ one axis} 
-                (FlattenMSA);
-  \draw[todots] (MSA)           --  (weightseqid);
-  \draw[todots] (weightseqid)   --  (FlattenMSA);
-  \draw[to]     (FlattenMSA)    --  (CovMat);
-  \draw[todots] (CovMat)        --  (weightcons);
-  \draw[to]     (MSA) to[bend left=40] 
-                    node[midway,above] {Project via \\ first singular vec} 
-                (DataProj);
-  \draw[todots] (weightcons)    --  (DataProj);
-  \draw[to]     (FlattenMSA)    --  (MaxEntBig);
-  \draw[to]     (CovMat)        --  (CompressCov);
-  \draw[todots] (weightcons)    to[bend left=20]  (CompressCov);
-  \draw[to]     (DataProj)      --  (MaxEntSmall);
+  \draw[to]     (MSA) to[bend right=20] 
+                (FlattenAxis);
+  \draw[to]     (FlattenAxis)       --  (FlattenMSA);
+  \draw[to]     (MSA) to[bend left=20]             
+                (SingularProj);
+  \draw[to]     (SingularProj)      --  (DataProj);
+  \draw[todots] (MSA)               --  (weightseqid);
+  \draw[todots] (MSA)               --  (weightcons);
+  \draw[todots] (weightseqid)       --  (FlattenMSA);
+  \draw[to]     (FlattenMSA)        --  (CovMat);
+  \draw[todots] (CovMat)            --  (weightcons);
+  \draw[todots] (weightcons)        --  (DataProj);
+  \draw[to]     (FlattenMSA)        --  (MaxEntBig);
+  \draw[to]     (CovMat)            --  (CompressCov);
+  \draw[todots] (weightcons)    to[bend left=20]  
+                (CompressCov);
+  \draw[to]     (DataProj)          --  (MaxEntSmall);
+  \draw[to]     (MaxEntBig)         --  (NetworkBig);
+  \draw[to]     (MaxEntSmall)       --  (NetworkSmall);
+  \draw[to]     (NetworkBig)        --  (CompressFrob);
+  \draw[to]     (CompressCov)       --  (CompressCovmat);
+  \draw[to]     (CompressCovmat)    --  (PCA);
+  \draw[to]     (PCA)               --  (ICA);
+  \draw[toapprx](CompressCovmat)    to
+                    node[midway,above,sloped] {Mean Field Approx?} 
+                    node[midway,below,sloped] {
+                            negative inverse \\covariance matrix
+                    } 
+                (NetworkSmall);
+  \draw[to]     (ICA)            --  (Sectors);
+  \draw[toapprx](NetworkBigSmall)   to
+                    node[near start,above,sloped]{Approximately equal?}
+                (NetworkSmall);
+  \draw[toapprx](CovMat)        to 
+                    node[midway,above,sloped] {Mean Field Approx} 
+                    node[midway,below,sloped] {
+                            negative inverse covariance matrix
+                    } 
+                (NetworkBig);
+  \draw[to]     (CompressFrob)      -- (NetworkBigSmall);
+  \draw[to]     (NetworkBigSmall)   -- (APC);
+  \draw[to]     (APC)               -- (Contacts);
 \end{tikzpicture}
-\end{center}
+\caption{Right column shows connection between 2013Cocco (left column) and 2016Rivoire (middle column)}
+\end{figure}
 \end{document}
