Adding covariance connections

--- a/projects/PCA_to_DCA/notes/DCA_sectors.tex
+++ b/projects/PCA_to_DCA/notes/DCA_sectors.tex
@@ -135,7 +135,12 @@
   \draw[todots] (MSA)               --  (weightseqid);
   \draw[todots] (MSA)               --  (weightcons);
   \draw[todots] (weightseqid)       --  (FlattenMSA);
-  \draw[to]     (FlattenMSA)        --  (CovMat);
+  \draw[to]     (FlattenMSA) to 
+                    node[midway,above]{Covariance}
+                (CovMat);
+  \draw[to]     (DataProj) to 
+                    node[midway,above,sloped]{Covariance}
+                (CompressCovmat);
   \draw[todots] (CovMat)            --  (weightcons);
   \draw[todots] (weightcons)        --  (DataProj);
   \draw[to]     (FlattenMSA)        --  (MaxEntBig);
